fix: image preview dialog overlapping (#1405)
* fix: image preview dialog overlapping

* Update web/src/less/preview-image-dialog.less

---------

--- a/web/src/less/preview-image-dialog.less
+++ b/web/src/less/preview-image-dialog.less
@@ -20,7 +20,7 @@
     }
 
     > .img-container {
-      @apply w-full h-full p-4 flex flex-col justify-center items-center hide-scrollbar;
+      @apply w-full h-full p-4 sm:p-20 flex flex-col justify-center items-center hide-scrollbar;
       background-color: unset;
 
       > img {
